--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-toastify": "^9.1.3",
     "swiper": "^10.3.0"
   },
   "devDependencies": {
